--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -66,3 +66,103 @@
         
     }
 }
+@media(min-width:100px) and (max-width:642px){
+    .heroContainer{
+
+        .heroBg{
+            
+    
+            .Sms{
+               
+    
+                h3{
+                    font-size: 20px;
+                    font-weight: 900;
+                }
+                p{
+                    font-size: 40px;
+                }
+            }
+
+        }
+    }
+}
+@media(min-width:100px) and (max-width:482px){
+    .heroContainer{
+
+        .heroBg{
+            
+    
+            .Sms{
+               
+    
+                h3{
+                    font-size: 15px;
+                    font-weight: 900;
+                }
+                p{
+                    font-size: 30px;
+                }
+            }
+
+        }
+    }
+}
+@media(min-width:100px) and (max-width:376px){
+    .heroContainer{
+
+        .heroBg{
+            
+    
+            .Sms{
+               
+    
+                h3{
+                    font-size: 20px;
+                    font-weight: 900;
+                }
+                p{
+                    font-size: 20px;
+                }
+                .Pc{
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    justify-content: space-around; 
+                    align-items: center;
+                    margin-top: 40px;
+                    gap: 5px;
+                }
+            }
+
+        }
+    }
+}
+@media(min-width:100px) and (max-width:302px){
+    .heroContainer{
+
+        .heroBg{
+            
+    
+            .Sms{
+               
+    
+                h3{
+                    font-size: 15px;
+                    font-weight: 900;
+                }
+                p{
+                    font-size: 15px;
+                }
+                .Pc{
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    justify-content: space-around; 
+                    align-items: center;
+                    margin-top: 40px;
+                    gap: 5px;
+                }
+            }
+
+        }
+    }
+}
